Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91088

QFormBuilder does not save 'name' attribute on 'widget' elements in UI-file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 6.1.0 Beta 1
    • 5.15.2
    • Tools: Designer
    • None
    • a8a01b6d2d7f5aab7b800bf054a6c323e1e78ab5 (qt/qttools/dev) 0c11e6c300a0377259ee44ad01d533d87ca68a38 (qt/qttools/6.1)

      When saving a UI form using QFormBuilder::save() the name attribute of all the widget elements are missing in the resulting (XML) UI-file.
      Expected is of QFormBuilder to save the attribute as the Designer application does.

      Related forum question

        For Gerrit Dashboard: QTBUG-91088
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            arjan Arjan van Olphen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes