QFormBuilder: Save the 'name' attribute

Move the setting of the name attribute to the base class.

Fixes: QTBUG-91088
Change-Id: I29955b5455015b4fc38b7f35d2247dac30d82d22
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit a8a01b6d2d7f5aab7b800bf054a6c323e1e78ab5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>